Página Long & Short

--- a/long_and_short.html
+++ b/long_and_short.html
@@ -1,20 +1,21 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>unapp Template</title>
+	<title>You Quant</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -22,7 +23,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -47,9 +48,10 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		
+</head>
+
+<body>
+
 	<div class="colorlib-loader"></div>
 
 	<div id="page">
@@ -64,13 +66,15 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="methods.html">Métodos</a>
+									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
+										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
 									</ul>
 								</li>
 								<li><a href="pricing.html">Preços</a></li>
-								<li><a href="contact.html">Contato</a></li>								
+								<li><a href="contact.html">Contato</a></li>
 							</ul>
 						</div>
 					</div>
@@ -78,18 +82,17 @@
 			</div>
 		</nav>
 
-		<section id="home" class="video-hero" style="height: 500px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
-		<div class="overlay"></div>
+		<section id="home" class="video-hero"
+			style="height: 500px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;"
+			data-section="home">
+			<div class="overlay"></div>
 			<div class="display-t display-t2 text-center">
 				<div class="display-tc display-tc2">
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Método Long & Short</h2>
-								<p class="breadcrumbs">
-									<span><a href="index.html">Home</a></span> 
-									<span><a href="methods.html">Métodos</a></span> 
-									<span>Long & Short</span>
+								<h2>Long & Short</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Long & Short</span>
 								</p>
 							</div>
 						</div>
@@ -98,119 +101,113 @@
 			</div>
 		</section>
 
-		<div class="colorlib-work">
+		<div class="colorlib-services">
 			<div class="container">
-				<div class="row">
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-1.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
+				<div class="two-collumns-long-and-short">
+					<div class="row col-md-6 text-center animate-box ">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-linegraph"></i>
+							</span>
 							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+								<h2>Long & Short por Cointegração</h2>
+								<p>O método consiste no cálculo estatístico dos preços das ações em diferentes períodos utilizando modelos de regressões lineares. 
+									São realizados testes de estacionariedade do resíduo estatístico proveniente das regressões, assim, opera-se o retorno deste resíduo à média.</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-2.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
+					<div class="col-md-6 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-linegraph"></i>
+							</span>
 							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-3.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
-							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-4.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
-							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-5.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
-							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-6.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
-							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-7.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
-							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-8.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
-							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="work-grid">
-							<a href="#" class="work-img" style="background-image: url(images/work-9.jpg)">
-								<span class="icon"><i class="icon-plus2"></i></span>
-							</a>
-							<div class="desc">
-								<h2><a href="#">A beige chair at a basket</a></h2>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+								<h2>Long & Short por Filtro Kalman</h2>
+								<p>Seu propósito é utilizar medições de grandezas realizadas ao longo do tempo e gerar resultados que tendam a se aproximar dos valores reais dos preços das ações. Foi projetado para trabalhar com sistemas dinâmicos e ruidosos semelhantes aos preços negociados das ações.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-12 text-center">
-						<ul class="pagination">
-							<li class="disabled"><a href="#">&laquo;</a></li>
-							<li class="active"><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">&raquo;</a></li>
-						</ul>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Busca por Heatmap</h3>
+								<p>Em forma de mapa de calor os pares passam por uma pré classificação quantitativa que fornece um rank que agiliza a busca de operações 
+									com o objetivo de reduzir o tempo de análise.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Filtro de Ativos Por Setor</h3>
+								<p>Mesmo que a cointegração aceite ativos de diferentes setores, criamos mais um filtro para auxiliar o investidor na escolha de suas operações.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Pares Favoritos</h3>
+								<p>Salve e gerencie seus pares favoritos, possibilitando fazer um acompanhamento mais centrado naqueles ativos preferidos ou que estejam no 
+									momento ideal de entrada.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Desvio Intraday</h3>
+								<p>Através de um gráfico do desvio intraday dos pares acompanhe graficamente a micro tendência do residuo da regressão linear.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Beta Rotation</h3>
+								<p>Mais um indicador facilitador para tomada de decisão que pode ser utilizado nas operações através da análise de sua tendência e volatilidade.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Execução Fracionada</h3>
+								<p>Execute ofertas com lote completo a mercado ou fracionado no desvio pré-configurado.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Ajuste Automático</h3>
+								<p>Esqueça ajustes manuais em pagamento de dividendos, juros sobre capital próprio, bonificações, desdobramentos e agrupamentos. 
+									Nossa ferramenta ajustsra as operações abertas automaticamente.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Stop Gain e Loss por Desvio</h3>
+								<p>Além do stop financeiro, configure seus stops gain e loss por desvio padrão. Tenha o total controle sobre a operação.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Execução</h3>
+								<p>Para uma experiência completa, disponibilizamos nosso robô de execução para a plataforma MT5 que contempla todas as
+								funcionalidades da ferramenta e é aceito na grande maioria das corretoras brasileiras.</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -220,66 +217,65 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-3 colorlib-widget">
-						<h4>About unapp</h4>
-						<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+						<h4>Sobre nós</h4>
+						<p>Somos uma plataforma de tecnologia focada em soluções automatizadas que utilizam algoritmos
+							quantitativos que analisam e processam em tempo real dados do mercado financeiro para gerar
+							informações com alto valor agregado aos nossos parceiros.</p>
 						<p>
 							<ul class="colorlib-social-icons">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<li><a href="#"><i class="icon-telegram"></i></a></li>
+								<li><a href="#"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</p>
 					</div>
 					<div class="col-md-3 colorlib-widget">
-						<h4>Information</h4>
+						<h4>Páginas</h4>
 						<p>
 							<ul class="colorlib-footer-links">
 								<li><a href="#"><i class="icon-check"></i> Home</a></li>
-								<li><a href="#"><i class="icon-check"></i> Gallery</a></li>
-								<li><a href="#"><i class="icon-check"></i> About</a></li>
-								<li><a href="#"><i class="icon-check"></i> Blog</a></li>
-								<li><a href="#"><i class="icon-check"></i> Contact</a></li>
-								<li><a href="#"><i class="icon-check"></i> Privacy</a></li>
+								<li><a href="#"><i class="icon-check"></i> Robôs</a></li>
+								<li><a href="#"><i class="icon-check"></i> Preços</a></li>
+								<li><a href="#"><i class="icon-check"></i> Contato</a></li>
 							</ul>
 						</p>
 					</div>
-
+		
 					<div class="col-md-3 colorlib-widget">
-						<h4>Recent Blog</h4>
+						<h4>Algoritmos</h4>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-1.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-159888.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Photoshoot Technique</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Long&Short Cointegração</a></h2>
+								<p class="admin"><span>Lançamento 01/10/19</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-2.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-1073765.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Camera Lens Shoot</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Opções</a></h2>
+								<p class="admin"><span>Lançamento 01/01/20</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-3.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-notebook.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Imahe the biggest photography studio</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Juros</a></h2>
+								<p class="admin"><span>Lançamento 02/01/20</span></p>
 							</div>
 						</div>
 					</div>
-
+		
 					<div class="col-md-3 colorlib-widget">
-						<h4>Contact Info</h4>
+						<h4>Contato</h4>
 						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+							<li><a href="mailto:contato@youquant.com.br"><i class="icon-envelope"></i>
+									contato@youquant.com.br</a></li>
+							<li><a href="#"><i class="icon-location4"></i> youquant.com.br</a></li>
 						</ul>
 					</div>
 				</div>
@@ -289,10 +285,13 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
-								Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+								is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+									target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br>
+								Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a>
 							</p>
 						</div>
 					</div>
@@ -304,7 +303,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -327,6 +326,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
