--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 					<div class="col-md-3 colorlib-widget">
 						<h4>Algoritmos</h4>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-1.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-159888.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Long&Short Cointegração</a></h2>
@@ -504,7 +504,7 @@
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-2.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-1073765.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Algoritmo de Opções</a></h2>
@@ -512,7 +512,7 @@
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-3.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-notebook.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Algoritmo de Juros</a></h2>
