--- a/mercado_de_opcoes.html
+++ b/mercado_de_opcoes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>You Quant</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -22,7 +23,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -47,9 +48,10 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		
+</head>
+
+<body>
+
 	<div class="colorlib-loader"></div>
 
 	<div id="page">
@@ -80,15 +82,18 @@
 			</div>
 		</nav>
 
-		<section id="home" class="video-hero" style="height: 500px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
-		<div class="overlay"></div>
+		<section id="home" class="video-hero"
+			style="height: 500px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;"
+			data-section="home">
+			<div class="overlay"></div>
 			<div class="display-t display-t2 text-center">
 				<div class="display-tc display-tc2">
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Algoritmos</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Algoritmos</span></p>
+								<h2>Long & Short</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Long & Short</span>
+								</p>
 							</div>
 						</div>
 					</div>
@@ -96,78 +101,106 @@
 			</div>
 		</section>
 
-		<div class="colorlib-work">
+		<div class="colorlib-services">
 			<div class="container">
+				<div class="two-collumns-long-and-short">
+					<div class="row col-md-6 text-center animate-box ">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-linegraph"></i>
+							</span>
+							<div class="desc">
+								<h2>Long & Short por Cointegração</h2>
+								<p>O método consiste no cálculo estatístico dos preços das ações em diferentes períodos utilizando modelos de regressões lineares. São realizados testes de estacionariedade do resíduo estatístico proveniente das regressões, assim, opera-se o retorno deste resíduo à média.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-linegraph"></i>
+							</span>
+							<div class="desc">
+								<h2>Long & Short por Filtro Kalman</h2>
+								<p>Seu propósito é utilizar medições de grandezas realizadas ao longo do tempo e gerar resultados que tendam a se aproximar dos valores reais dos preços das ações. Foi projetado para trabalhar com sistemas dinâmicos e ruidosos semelhantes aos preços negociados das ações.</p>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="row">
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-push-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/pexels-photo-590022.jpg);"></a>
-									</div>
-								</div>
-							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-pull-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="long_and_short.html">Long & Short</a></h2>
-												<h3><a href="long_and_short.html">Long & Short por Cointegração</a></h3>
-												<h3><a target="_blank" href="https://www.linkedin.com/pulse/uso-de-filtro-kalman-para-opera%C3%A7%C3%B5es-compra-e-venda-simult%C3%A2nea-ferro/">Long & Short por Filtro de Kalman</a></h3>
-											</div>
-										</div>
-									</div>
-								</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Busca por Heatmap</h3>
+								<p>Em forma de mapa de calor os pares passam por uma pré classificação quantitativa que fornece um rank que agiliza a busca de operações com o objetivo de reduzir o tempo de análise.</p>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/pexels-photo-1073765.jpg);"></a>
-									</div>
-								</div>
-							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="#">Mercado de Opções</a></h2>
-												<h3><a href="opcoes.html">Opções pela Volatilidade</a></h3>
-											</div>
-										</div>
-									</div>
-								</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Filtro de Ativos Por Setor</h3>
+								<p>Mesmo que a cointegração aceite ativos de diferentes setores, criamos mais um filtro para auxiliar o investidor na escolha de suas operações.</p>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-push-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/accounting-banking-calculator-938965.jpg);"></a>
-									</div>
-								</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Pares Favoritos</h3>
+								<p>Salve e gerencie seus pares favoritos, possibilitando fazer um acompanhamento mais centrado naqueles ativos preferidos ou que estejam no momento ideal de entrada.</p>
 							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-pull-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="#">Mercado de Juros Futuro</a></h2>
-												<h3><a href="opcoes.html">Juros Futuro (DI)</a></h3>
-											</div>
-										</div>
-									</div>
-								</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Desvio Intraday</h3>
+								<p>Através de um gráfico do desvio intraday dos pares acompanhe graficamente a micro tendência do residuo da regressão linear.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Beta Rotation</h3>
+								<p>Mais um indicador facilitador para tomada de decisão que pode ser utilizado nas operações através da análise de sua tendência e volatilidade.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Execução Fracionada</h3>
+								<p>Execute ofertas com lote completo a mercado ou fracionado no desvio pré-configurado.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Ajuste Automático</h3>
+								<p>Esqueça ajustes manuais em pagamento de dividendos, juros sobre capital próprio, bonificações, desdobramentos e agrupamentos. Nossa ferramenta ajustsra as operações abertas automaticamente.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Stop Gain e Loss por Desvio</h3>
+								<p>Além do stop financeiro, configure seus stops gain e loss por desvio padrão. Tenha o total controle sobre a operação.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Execução</h3>
+								<p>Execute e tenha o total controle de suas operações na plataforma Metatrader5, aceita nas principais corretoras em todo o mundo.</p>
 							</div>
 						</div>
 					</div>
@@ -265,7 +298,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -288,6 +321,6 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
