Correção texto long_and_short.html, textos mercado_de_opcoes.html

--- a/long_and_short.html
+++ b/long_and_short.html
@@ -177,7 +177,7 @@
 						<div class="services">
 							<div class="desc">
 								<h3>Execução Fracionada</h3>
-								<p>Execute ofertas com lote completo a mercado ou fracionado no desvio pré-configurado.</p>
+								<p>Execução a mercado com o lote completo ou fracionado assim que o desvio padrão de entrada ou saída for atingido.</p>
 							</div>
 						</div>
 					</div>
@@ -188,7 +188,7 @@
 							<div class="desc">
 								<h3>Ajuste Automático</h3>
 								<p>Esqueça ajustes manuais em pagamento de dividendos, juros sobre capital próprio, bonificações, desdobramentos e agrupamentos. 
-									Nossa ferramenta ajustsra as operações abertas automaticamente.</p>
+									Nossa ferramenta ajustará as operações abertas automaticamente.</p>
 							</div>
 						</div>
 					</div>
