--- a/mercado_de_opcoes.html
+++ b/mercado_de_opcoes.html
@@ -91,8 +91,8 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Long & Short</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Long & Short</span>
+								<h2>Mercado de Opcões</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Mercado de Opcões</span>
 								</p>
 							</div>
 						</div>
@@ -104,25 +104,16 @@
 		<div class="colorlib-services">
 			<div class="container">
 				<div class="two-collumns-long-and-short">
-					<div class="row col-md-6 text-center animate-box ">
+					<div class="row col-md-12 text-center animate-box ">
 						<div class="services">
 							<span class="icon">
 								<i class="icon-linegraph"></i>
 							</span>
 							<div class="desc">
-								<h2>Long & Short por Cointegração</h2>
-								<p>O método consiste no cálculo estatístico dos preços das ações em diferentes períodos utilizando modelos de regressões lineares. São realizados testes de estacionariedade do resíduo estatístico proveniente das regressões, assim, opera-se o retorno deste resíduo à média.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 text-center animate-box">
-						<div class="services">
-							<span class="icon">
-								<i class="icon-linegraph"></i>
-							</span>
-							<div class="desc">
-								<h2>Long & Short por Filtro Kalman</h2>
-								<p>Seu propósito é utilizar medições de grandezas realizadas ao longo do tempo e gerar resultados que tendam a se aproximar dos valores reais dos preços das ações. Foi projetado para trabalhar com sistemas dinâmicos e ruidosos semelhantes aos preços negociados das ações.</p>
+								<h2>Opções pela volatilidade</h2>
+								<p>O método de opções pela volatilidade permite ao investidor executar operações baseadas na volatilidade das opções precificada pelo mercado. 
+									Através da média e desvio padrão da volatilidade negociada você poderá executar operações de compra e venda de volatilidade no intraday ou estrururar operações para carrego em carteira.
+								</p>
 							</div>
 						</div>
 					</div>
@@ -131,50 +122,24 @@
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<div class="desc">
-								<h3>Busca por Heatmap</h3>
-								<p>Em forma de mapa de calor os pares passam por uma pré classificação quantitativa que fornece um rank que agiliza a busca de operações com o objetivo de reduzir o tempo de análise.</p>
+								<h3>Garch</h3>
+								<p>Modelo de precificação da Volatilidade Implícita futura utilizado para predizer o quão cara está Volatilidade Implícita atual das opções com 50 de delta.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<div class="desc">
-								<h3>Filtro de Ativos Por Setor</h3>
-								<p>Mesmo que a cointegração aceite ativos de diferentes setores, criamos mais um filtro para auxiliar o investidor na escolha de suas operações.</p>
+								<h3>IV Rank</h3>
+								<p>O IV Rank é medida relativa a qual indica se a Volatilidade Implícita da ação está alta ou baixa em relação ao histórico dela mesma em um período de um ano.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<div class="desc">
-								<h3>Pares Favoritos</h3>
-								<p>Salve e gerencie seus pares favoritos, possibilitando fazer um acompanhamento mais centrado naqueles ativos preferidos ou que estejam no momento ideal de entrada.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Desvio Intraday</h3>
-								<p>Através de um gráfico do desvio intraday dos pares acompanhe graficamente a micro tendência do residuo da regressão linear.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Beta Rotation</h3>
-								<p>Mais um indicador facilitador para tomada de decisão que pode ser utilizado nas operações através da análise de sua tendência e volatilidade.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Execução Fracionada</h3>
-								<p>Execute ofertas com lote completo a mercado ou fracionado no desvio pré-configurado.</p>
+								<h3>IV Percentile</h3>
+								<p>IV Percentile diz o percentual em um período de um ano o quanto a Volatilidade Implícita (VI) foi menor do que a VI atual precificada pelo mercado.</p>
 							</div>
 						</div>
 					</div>
@@ -183,16 +148,16 @@
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<div class="desc">
-								<h3>Ajuste Automático</h3>
-								<p>Esqueça ajustes manuais em pagamento de dividendos, juros sobre capital próprio, bonificações, desdobramentos e agrupamentos. Nossa ferramenta ajustsra as operações abertas automaticamente.</p>
+								<h3>Volatilidade Intraday</h3>
+								<p>Tenha acesso aos históricos intraday e diário das volatilidades de compra, venda e negociada das opções com 50 de delta dos ativos mais líquidos. </p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<div class="desc">
-								<h3>Stop Gain e Loss por Desvio</h3>
-								<p>Além do stop financeiro, configure seus stops gain e loss por desvio padrão. Tenha o total controle sobre a operação.</p>
+								<h3>Stop Gain e Loss por Diferença de VOL</h3>
+								<p>Configure seus stops gain e loss por diferença volatilidade ou risco vega suportado pelo seu gerenciamento de risco.</p>
 							</div>
 						</div>
 					</div>
@@ -200,7 +165,25 @@
 						<div class="services">
 							<div class="desc">
 								<h3>Execução</h3>
-								<p>Execute e tenha o total controle de suas operações na plataforma Metatrader5, aceita nas principais corretoras em todo o mundo.</p>
+								<p>Execute e tenha o total controle de suas operações na plataforma Metatrader5, aceita nas principais corretoras em todo o mundo. Execute operações por difereça de spread ou volatilidade.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Simulação de Risco pelas Gregas</h3>
+								<p>Simule e estruture melhor suas operações de acordo com os riscos gamma, delta e vega. </p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Skew e Delta Hedge</h3>
+								<p>Simule e execute operações de Skew e Delta Hedge de maneira simples e sem planilhas.</p>
 							</div>
 						</div>
 					</div>
