--- a/mercado_de_juros.html
+++ b/mercado_de_juros.html
@@ -69,7 +69,7 @@
 									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
-										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opções</a></li>
 										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
 									</ul>
 								</li>
