--- a/mercado_de_opcoes.html
+++ b/mercado_de_opcoes.html
@@ -69,7 +69,7 @@
 									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
-										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opções</a></li>
 										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
 									</ul>
 								</li>
@@ -91,8 +91,8 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Mercado de Opcões</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Mercado de Opcões</span>
+								<h2>Mercado de Opções</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Mercado de Opções</span>
 								</p>
 							</div>
 						</div>
