--- a/long_and_short.html
+++ b/long_and_short.html
@@ -69,7 +69,7 @@
 									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
-										<li><a href="mercado_de_opcoes.html">Mercado de Opções</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
 										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
 									</ul>
 								</li>
@@ -103,7 +103,7 @@
 
 		<div class="colorlib-services">
 			<div class="container">
-				<div class="two-collumns-long-and-short">
+				<div class="row">
 					<div class="col-md-6 text-center animate-box ">
 						<div class="services">
 							<span class="icon">
